# nur

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/nur/: Cargo.toml
crates/nur/src/: config.rs  main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: context.rs  lib.rs  lua_tests.rs  vm.rs
crates/runtime/src/api/: mod.rs  services.rs  shell.rs  ui.rs
crates/runtime/src/bridge/: element.rs  mod.rs  state.rs  window.rs
crates/services/: Cargo.toml
crates/services/src/: audio.rs  battery.rs  lib.rs  network.rs  sys_info.rs
crates/services/src/compositor/: hyprland.rs  mod.rs  niri.rs
examples/full-desktop/: init.lua
examples/simple-bar/: init.lua
lua/nur/: stdlib.lua  utils.lua
lua/nur/widgets/: battery.lua  clock.lua  workspaces.lua
nix/: lib.nix  module.nix
