[package]
name    = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui.workspace     = true
services.workspace = true
assets.workspace   = true
mlua.workspace     = true

anyhow       = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
