[package]
name    = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui.workspace = true

anyhow     = { workspace = true }
tracing    = { workspace = true }
zbus       = { workspace = true }
serde_json = { workspace = true }
hyprland   = { workspace = true }
niri-ipc   = { workspace = true }

sysinfo = "0.35"
